[package]
name = "libnice"
version = "0.2.0"
authors = ["Jonas Herzig <me@johni0702.de>"]
edition = "2018"
description = "Safe, high-level Rust bindings to libnice."
license = "LGPL-2.1 OR MPL-1.1"
repository = "https://github.com/johni0702/rust-libnice"

[dependencies]
#libnice-sys = "0.3"
libnice-sys = { git = "https://github.com/MissXecutioner/rust-libnice-sys" }
#libnice-sys = { path = "..\\rust-libnice-sys" }
libc = "0.2.180"
glib = "0.9"
futures = "0.3.31"
webrtc-sdp = "0.3.13"
tokio = { version = "1.49", features = ["rt", "macros"] }

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
